[package]
name = "http-server"
version = "0.1.0"
authors = [
    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
    "Sergio Gasquez <sergio.gasquez@gmail.com>",
]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow       = "=1.0.75"
embedded-svc = "=0.26.4"
esp-idf-svc  = "=0.47.3"
shtcx        = "=0.11.0"
toml-cfg     = "=0.1.3"
wifi         = { path = "../std-training/common/lib/wifi" }
urlencoding = "1.1.1" # Check https://crates.io/crates/urlencoding for the latest version
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }


[build-dependencies]
embuild  = "=0.31.4"
toml-cfg = "=0.1.3"

[dev-dependencies]
anyhow = "1"
futures = "0.3"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
postcard = "1"
async-io = "2"
